crud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
  namespace: pfinal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Reescritura de ruta
spec:
  ingressClassName: nginx
  rules:
  - host: crud.midominio.com  # Hostname para acceder
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crud-service
            port:
              number: 8080
